fix "select by type" js

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,6 @@
     overflow: hidden;
 }
 
-.path-local-downloadcenter .grouped_settings.section_level.block {
+.path-local-downloadcenter .mform .block {
     padding-top: 5px;
 }
