--- a/styles.css
+++ b/styles.css
@@ -65,31 +65,23 @@
 
 /* boost fixes */
 
-.path-local-downloadcenter #region-main .mform .fitem.downloadcenter_selector .col-md-9 {
-    width: 320px;
-    text-align: right;
-}
-.path-local-downloadcenter #region-main .card-block .mform .fitem .col-md-9 {
-    width: 50%;
-    text-align: right;
-}
-.path-local-downloadcenter #region-main .card-block .mform .fitem .col-md-3 {
-    width: 50%;
-    float: right;
+.path-local-downloadcenter #region-main .card-block .card.block .col-md-3 {
+    display: none;
 }
 
-.path-local-downloadcenter #region-main .card-block .mform .fitem .col-md-9 .sectiontitle {
+.path-local-downloadcenter #region-main .card-block .card.block {
+    padding-left: 2rem;
+    padding-top: 1rem;
+}
+.path-local-downloadcenter #region-main .card-block .card.block .form-group.downloadcenter_selector label span,
+.path-local-downloadcenter #region-main .card-block .card.block .form-group:first-child label span,
+.path-local-downloadcenter #region-main .card-block .card.block .form-group:first-child label,
+.path-local-downloadcenter #region-main .card-block .card.block .form-group:first-child {
     font-weight: bold;
 }
 
-.path-local-downloadcenter #region-main .card-block .mform .fitem .col-md-9 input[type="checkbox"] {
-    float: right;
-    margin-top: 2px;
-    margin-left: 10px;
-}
 
-
-/* delete first empty row used in hack */
+    /* delete first empty row used in hack */
 .path-local-downloadcenter #region-main .card-block .mform .warningmessage + .fitem {
     display: none;
 }
@@ -108,32 +100,12 @@
 
 
 @media(max-width: 1475px) {
-/*}
-
-@media(max-width: 1229px) {*/
     .path-local-downloadcenter form .fitemtitle {
         float: none !important;
     }
 
     .path-local-downloadcenter form .itemtitle span {
         max-width: 380px;
-    }
-
-
-    /* boost fixes */
-
-    .path-local-downloadcenter #region-main .mform .fitem.downloadcenter_selector .col-md-9 {
-        width: 100%;
-        text-align: left;
-        padding-left: 40px;
-    }
-    .path-local-downloadcenter #region-main .card-block .mform .fitem .col-md-9 {
-        width: 75%;
-        text-align: right;
-        padding-left: 0;
-    }
-    .path-local-downloadcenter #region-main .card-block .mform .fitem .col-md-3 {
-        width: 25%;
     }
 
 }
@@ -144,20 +116,6 @@
     }
 }
 
-@media(max-width: 619px) {
-
-    /* boost fixes */
-    .path-local-downloadcenter #region-main .card-block .mform .fitem .col-md-9 {
-        width: 100%;
-    }
-    .path-local-downloadcenter #region-main .card-block .mform .fitem .col-md-3 {
-        width: 0;
-    }
-    .path-local-downloadcenter form .itemtitle span {
-        max-width: 250px;
-    }
-
-}
 
 @media(max-width: 499px) {
     .path-local-downloadcenter form .itemtitle span {
@@ -175,3 +133,4 @@
 
 
 }
+
