--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,11 @@
     display: none;
 }
 
+
+.path-local-downloadcenter #region-main .card-body .card.block {
+    margin-bottom: 0.5rem;
+}
+
 .path-local-downloadcenter #region-main .card.block:nth-child(2n) {
     background-color: #f5f5f5;
 }
