Fix negative left margin on CSS class

--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,7 @@
 .path-local-downloadcenter .mform .row.downloadcenter_selector {
     margin-top: 0;
     margin-bottom: 0;
+    margin-left: 0;
 }
 
 
