--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,10 @@
     width: 100%;
 }
 
+.path-local-downloadcenter .mform #id_downloadoptionscontainer .row label {
+    width: auto;
+}
+
 .path-local-downloadcenter .mform .row.downloadcenter_selector label {
     margin-right: 10px;
     width: auto;
