--- a/templates/searchbox.mustache
+++ b/templates/searchbox.mustache
@@ -1,5 +1,30 @@
-<div>
+{{!
+    This file is part of Moodle - http://moodle.org/
 
+    Moodle is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Moodle is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+}}
+{{!
+    @template local_downloadcenter/searchbox
+
+    Search box for the download center.
+
+    Context variables required for this template:
+    * none
+
+    This template includes ajax functionality, so it cannot be shown in the template library.
+}}
+<div>
     <div class="input-group">
         <input type="text" id="downloadcenter-search-input" class="form-control" placeholder="{{#str}}search:hint,local_downloadcenter{{/str}}" aria-label="{{#str}}search:hint,local_downloadcenter{{/str}}">
         <div class="input-group-append">
@@ -10,7 +35,6 @@
         <strong>{{#str}}search:results,local_downloadcenter{{/str}}: <span id="downloadcenter-search-results-count"></span></strong>
     </div>
 </div>
-
 
 {{#js}}
     require(['local_downloadcenter/search'], function(search) {
