fix codechecker issues 3

--- a/templates/searchbox.mustache
+++ b/templates/searchbox.mustache
@@ -19,10 +19,19 @@
 
     Search box for the download center.
 
+    Classes required for JS:
+    * none
+
+    Data attributes required for JS:
+    * none
+
     Context variables required for this template:
     * none
 
-    This template includes ajax functionality, so it cannot be shown in the template library.
+    This template uses ajax functionality, so it cannot be shown in the template library.
+
+    Example context (json):
+    { }
 }}
 <div>
     <div class="input-group">
